--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 #cal, #extras, #controls, #footer { min-width: 520px; width: 90%; margin: 0 auto; margin-top: 30px; }
 @media all and ( max-width: 1000px ) {
-  body { font-size: 65%; }
+    body { font-size: 65%; }
 }
 @media all and ( min-width: 1000px ) and ( max-width: 1200px ) {
   body { font-size: 75%; }
 }
 @media all and ( min-width: 1600px ) {
-  body { font-size: 100%; }
+    body { font-size: 100%; }
 }
 #controls, #cal { border: 1px solid black; }
 #calgrid { height: 175; position: relative; }
@@ -17,3 +17,16 @@
 #extras > * { display: inline-block; }
 #tools { float: right; }
 #controls>label { padding: 2px; margin: 4px 25px 4px 4px; }
+
+#pnglink {
+  font: bold 15px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+  border-radius: 5px;
+}
